--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.9.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "typescript": "4.9.5",
+    "uuidv4": "^6.2.13",
     "yup": "^1.0.0"
   },
   "devDependencies": {
