--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.15",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
+    "@mui/styled-engine-sc": "^5.11.9",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "18.13.0",
@@ -22,15 +27,19 @@
     "js-cookie": "^3.0.1",
     "mongoose": "^6.9.1",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "uuidv4": "^6.2.13",
     "yup": "^1.0.0"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.11",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
