--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "ts-node-dev --no-notify --respawn --transpile-only pages/api/graphql.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.15",
@@ -16,14 +18,20 @@
     "@mui/material": "^5.11.9",
     "@mui/styled-engine-sc": "^5.11.9",
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.10.1",
     "@reduxjs/toolkit": "^1.9.2",
-    "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "apollo-client": "^2.6.10",
+    "apollo-server": "^3.11.1",
+    "apollo-server-micro": "^3.11.1",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "formik": "^2.2.9",
+    "graphql-fields": "^2.0.3",
+    "graphql-type-json": "^0.3.2",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.9.1",
     "next": "13.1.6",
@@ -33,15 +41,24 @@
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.6",
-    "typescript": "4.9.5",
+    "type-graphql": "^1.1.1",
     "uuidv4": "^6.2.13",
     "yup": "^1.0.0"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.11",
+    "@types/graphql-fields": "^1.3.4",
+    "@types/node": "^18.14.0",
+    "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6"
+    "prisma": "^4.10.1",
+    "tailwindcss": "^3.2.6",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typegraphql-prisma": "^0.23.5",
+    "typescript": "^4.9.5"
   }
 }
