--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "@components/*": ["./components/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/order.mts"],
   "exclude": ["node_modules"]
 }
