--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@next/font": "13.1.6",
     "@prisma/client": "^4.10.1",
     "@reduxjs/toolkit": "^1.9.2",
+    "@stripe/stripe-js": "^1.47.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "apollo-client": "^2.6.10",
     "apollo-server": "^3.11.1",
     "apollo-server-micro": "^3.11.1",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
     "eslint": "8.33.0",
@@ -42,6 +44,7 @@
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "reflect-metadata": "^0.1.13",
+    "stripe": "^11.12.0",
     "styled-components": "^5.3.6",
     "type-graphql": "^1.1.1",
     "uuidv4": "^6.2.13",
