--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals"]
+  "extends": ["eslint:recommended", "next/core-web-vitals"],
+  "rules": { "no-undef": "off" }
 }
