--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.11",
+    "@types/bcryptjs": "^2.4.2",
     "@types/graphql-fields": "^1.3.4",
     "@types/node": "^18.14.0",
     "@types/ws": "^8.5.3",
