--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^6.9.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "raw-body": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
@@ -54,7 +55,7 @@
     "@headlessui/react": "^1.7.11",
     "@types/bcryptjs": "^2.4.2",
     "@types/graphql-fields": "^1.3.4",
-    "@types/node": "^18.14.0",
+    "@types/node": "^18.14.2",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
